--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>blah</title> 
+  <meta charset="UTF-8"> 
+  <meta name="description" content="website">
+</head>  
+  <body>
+  </body>
+</html>
