--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>blah</title> 
   <meta charset="UTF-8"> 
   <meta name="description" content="website">
-  <meta name="keywords">
+  <meta name="keywords" content="website">
 </head>  
   <body>
   </body>
