automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8"> 
   <meta name="description" content="website">
   <meta name="keywords" content="tigers, lions">
+  <meta name="author" content="Emily">
 </head>  
   <body>
   </body>
