--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="tigers, lions">
   <meta name="author" content="Emily">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>  
   <body>
   </body>
