--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>blah</title> 
+  <meta charset="UTF-8"> 
+  <meta name="description" content="website">
+  <meta name="keywords" content="tigers, lions">
+  <meta name="author" content="Emily">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>  
+  <body>
+  </body>
+</html>
